--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-    <title>About</title>
+
+    <title>Abou</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="about.css">
