--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
 </head>
 
 <body style="background-color: #161b22;">
+    <div id="loading-spinner" class="d-none justify-content-center align-items-center">
+        <div class="spinner-border text-light" role="status">
+            <span class="sr-only">Loading...</span>
+        </div>
+    </div>
     <div class="top-bar">
         <div class="social-icons">
             <a href="https://www.facebook.com/profile.php?id=100010284099485&mibextid=ZbWKwL" class="icon">
@@ -28,41 +32,33 @@
     <header>
         <nav class="main-nav">
             <ul>
-                <li><a href="#home">HOME</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="index.html" class="nav-link">HOME</a></li>
+                <li><a href="portfolio.html" class="nav-link">PORTFOLIO</a></li>
+                <li><a href="about.html" class="nav-link">ABOUT</a></li>
+                <li><a href="contact.html" class="nav-link">CONTACT</a></li>
             </ul>
         </nav>
         <img src="images/my.jpg" alt="My Image" class="profile-pic">
         <h1>Hi, I'm Omar Haji</h1>
         <p>I'm a front-end web developer based in Nablus. Welcome to my website.</p>
     </header>
-
-    <section class="intro-section">
-        <h2>Hello there</h2>
-        <p>My name is Omar Haji. I'm a fresh graduate front-end web application developer. I design and
-            develop websites for small and medium businesses.
-        </p>
-        <p> I'm fast and self-learner
-            programmer with an interest in exploring and mastering new programming
-            concepts.
-        </p>
-        <p>
-            am proficient in detecting logical problems and special test cases and fix
-            them. Able to learn new skills anytime, I perform well under pressure. Excited to
-            work with you.
-        </p>
-    </section>
-
-    <section class="contact-section">
-        <h3>Contact me</h3>
-        <p><i class="fas fa-map-marker-alt"></i> Nablus City, PS</p>
-        <p><i class="fas fa-phone"></i> +970 594503729</p>
-        <p><i class="fas fa-envelope"></i> omarhaji0002@gmail.com</p>
-    </section>
-    <button id="scrollToTopBtn" class="scroll-to-top">^</button>
-    <br><br><br>
+    <main>
+        <section class="intro-section">
+            <h2>Hello there</h2>
+            <p>My name is Omar Haji. I'm a fresh graduate front-end web application developer. I design and develop
+                websites for small and medium businesses.</p>
+            <p> I'm fast and self-learner programmer with an interest in exploring and mastering new programming
+                concepts.</p>
+            <p>I am proficient in detecting logical problems and special test cases and fix them. Able to learn new
+                skills anytime, I perform well under pressure. Excited to work with you.</p>
+        </section>
+        <section class="contact-section">
+            <h3>Contact me</h3>
+            <p><i class="fas fa-map-marker-alt"></i> Nablus City, PS</p>
+            <p><i class="fas fa-phone"></i> +970 594503729</p>
+            <p><i class="fas fa-envelope"></i> omarhaji0002@gmail.com</p>
+        </section>
+    </main>
     <footer>
         <div class="footer-bottom">
             <div class="footer-content">
@@ -82,7 +78,9 @@
             </div>
         </div>
     </footer>
+    <button id="scrollToTopBtn" class="scroll-to-top">^</button>
     <script src="scroll.js"></script>
+    <script src="lazyload.js"></script>
 </body>
 
 </html>
