--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         </div>
     </footer>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
-    <script src="scroll.js"></script>
+    <script src="stickyAndSmoothMeUp.js"></script>
 </body>
 
 </html>
