--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My Freelance Page</title>
+    <title>My Freelancer Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="index.css">
@@ -82,7 +82,7 @@
             </div>
         </div>
     </footer>
-    <script src="scroll.js"></script>
+    <script src="stickyAndSmoothMeUp.js"></script>
 </body>
 
 </html>
