--- a/portfolio.html
+++ b/portfolio.html
@@ -119,8 +119,7 @@
     </footer>
 
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
-    <script src="scroll.js"></script>
-
+    <script src="stickyAndSmoothMeUp.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
