--- a/contact.html
+++ b/contact.html
@@ -11,29 +11,9 @@
 </head>
 
 <body style="background-color: #161b22;">
-    <div class="top-bar">
-        <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100010284099485&mibextid=ZbWKwL" class="icon">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="https://www.instagram.com/omar_haji0001" class="icon">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/omar-haji-0243b128b" class="icon">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-        </div>
-        <button onclick="location.href='contact.html'" style="border-radius: 5px;">Hire me now</button>
-    </div>
+    <div id="topbar-placeholder"></div>
     <header>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
+        <div id="mainnav-placeholder"></div>
         <h1>Contact</h1>
         <p>If you have any questions, feel free to contact me using the form below.</p>
     </header>
@@ -58,27 +38,13 @@
         <p><i class="fas fa-envelope"></i> omarhaji0002@gmail.com</p>
     </section>
     <br><br><br>
-    <footer>
-        <div class="footer-bottom">
-            <div class="footer-content">
-                <p>&copy; Copyright 2024 - Omar Haji</p>
-                <div class="footer-icons">
-                    <span>Follow Me: </span>
-                    <a href="https://www.facebook.com/profile.php?id=100010284099485&mibextid=ZbWKwL" class="icon">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="https://www.instagram.com/omar_haji0001" class="icon">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/omar-haji-0243b128b" class="icon">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
     <script src="stickyAndSmoothMeUp.js"></script>
+    <script src="mainnav.js"></script>
+    <script src="topbar.js"></script>
+    <script src="footer.js"></script>
+
 </body>
 
 </html>
