--- a/portfolio.html
+++ b/portfolio.html
@@ -11,30 +11,9 @@
 </head>
 
 <body>
-    <div class="top-bar">
-        <div class="social-icons">
-            <a href="https://www.facebook.com/profile.php?id=100010284099485&mibextid=ZbWKwL" class="icon">
-                <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="https://www.instagram.com/omar_haji0001" class="icon">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/omar-haji-0243b128b" class="icon">
-                <i class="fab fa-linkedin-in"></i>
-            </a>
-        </div>
-        <button onclick="location.href='contact.html'">Hire me now</button>
-    </div>
-
+    <div id="topbar-placeholder"></div>
     <header>
-        <nav class="main-nav">
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="portfolio.html">PORTFOLIO</a></li>
-                <li><a href="about.html">ABOUT</a></li>
-                <li><a href="contact.html">CONTACT</a></li>
-            </ul>
-        </nav>
+        <div id="mainnav-placeholder"></div>
         <h1>Portfolio</h1>
         <p>Check out some of my projects below.</p>
     </header>
@@ -98,28 +77,12 @@
         </div>
     </div>
     <br>
-    <footer>
-        <div class="footer-bottom">
-            <div class="footer-content">
-                <p>&copy; Copyright 2024 - Omar Haji</p>
-                <div class="footer-icons">
-                    <span>Follow Me: </span>
-                    <a href="https://www.facebook.com/profile.php?id=100010284099485&mibextid=ZbWKwL" class="icon">
-                        <i class="fab fa-facebook-f"></i>
-                    </a>
-                    <a href="https://www.instagram.com/omar_haji0001" class="icon">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-                    <a href="https://www.linkedin.com/in/omar-haji-0243b128b" class="icon">
-                        <i class="fab fa-linkedin-in"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </footer>
-
+    <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
     <script src="stickyAndSmoothMeUp.js"></script>
+    <script src="mainnav.js"></script>
+    <script src="topbar.js"></script>
+    <script src="footer.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
