--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <header>
         <div id="mainnav-placeholder"></div>
         <h1>About Me</h1>
-        <p>Learn more about me and my work.</p>
+        <p><span class="auto-type"></span></p>
     </header>
 
     <section class="about-section">
@@ -66,6 +66,14 @@
     <script src="mainnav.js"></script>
     <script src="topbar.js"></script>
     <script src="footer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        var typed = new Typed(".auto-type", {
+            strings: ["Learn more about me and my work."],
+            typeSpeed: 100,
+            backSpeed: 50,
+        });
+    </script>
 </body>
 
 </html>
