--- a/portfolio.html
+++ b/portfolio.html
@@ -33,8 +33,28 @@
                     <div class="carousel-image-wrapper">
                         <img src="images/AutoDemo.png" class="d-block w-100" alt="Project 1">
                         <div class="overlay">
-                            <div class="overlay-text">AutoMentor: An educational simulation providing a realistic
-                                driving experience with Unity, featuring user-controlled and AI-driven cars.</div>
+                            <div class="overlay-text">AutoMentor is well-designed, simulation-based educational package
+                                that gives learners an almost real, interactive
+                                driving experience. The small city environment is programmed using the Unity game
+                                engine, populated with user-controlled
+                                car, AI-driven cars and non-player characters. It contains a particular set of rules and
+                                scenarios to test and improve
+                                user’s driving skills.
+                                While playing, the player will drive in the city in their car using a physical driving
+                                kit. Just as in actual physical
+                                driving controller in a real car, when everything is realistic, the game is noticed to
+                                have any violation of any rule or
+                                a mistake made by the player and, in turn, penalizes it. There is notably a system
+                                called "rewind," in which the players
+                                may go back to the moments that led to a mistake, where they can correct it.
+                                The AI cars follow realistic driving patterns, creating a learning environment that
+                                mirrors real-world road conditions.
+                                This project will already bridge the enormous gap between theoretical knowledge
+                                regarding driving and practical
+                                application, with a very safe and controlled learning environment where learners may
+                                practice and perfect their driving
+                                skills.
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-caption d-none d-md-block">
@@ -43,26 +63,44 @@
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-image-wrapper">
-                        <img src="images/AutoDemo.png" class="d-block w-100" alt="Project 1">
+                        <img src="images/City Box Colliders.png" class="d-block w-100" alt="Project 1">
                         <div class="overlay">
-                            <div class="overlay-text">AutoMentor: An educational simulation providing a realistic
-                                driving experience with Unity, featuring user-controlled and AI-driven cars.</div>
+                            <div class="overlay-text">Box Colliders:
+                                These game objects are invisible to the user, they only appear for developers at the
+                                development stage. These game
+                                objects are used for scripting the simulator behavior
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-caption d-none d-md-block">
-                        <h5 class="project-name">AutoMentor</h5>
+                        <h5 class="project-name">AutoMentor Box Colliders</h5>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-image-wrapper">
-                        <img src="images/AutoDemo.png" class="d-block w-100" alt="Project 1">
+                        <img src="images/Stop Sign.png" class="d-block w-100" alt="Project 1">
                         <div class="overlay">
-                            <div class="overlay-text">AutoMentor: An educational simulation providing a realistic
-                                driving experience with Unity, featuring user-controlled and AI-driven cars.</div>
+                            <div class="overlay-text">When the user enters the stop zone game object, he should at least
+                                fully stop for 5 seconds to ensure that no risks
+                                threaten his safety and use indicators to show his intended destination. Any breaking of
+                                these rules will get him
+                                penalized.
+                                When the AI car sensor detects the stop sign game object, the AI script will use
+                                equations of motion by getting the
+                                velocity of the AI car and the remaining distance between the first detection position
+                                and the stop zone position to
+                                apply the equations, to ensure that the AI car will stop exactly at the correct stop
+                                zone. After waiting for 5 seconds,
+                                the AI car will decide to move and turn the wanted indicator on, but before moving, the
+                                AI car will check if there are
+                                cars on the left if it wants to go in the right direction, and it'll check right and
+                                left if it wants to go the left
+                                direction.
+                            </div>
                         </div>
                     </div>
                     <div class="carousel-caption d-none d-md-block">
-                        <h5 class="project-name">AutoMentor</h5>
+                        <h5 class="project-name">AutoMentor Stop Sign For AI and User Rules</h5>
                     </div>
                 </div>
             </div>
