--- a/about.html
+++ b/about.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="about.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
 </head>
 
 <body style="background-color: #161b22;">
+    <div class="loader">
+        <img src="images/spinner.gif" alt="Loading...">
+    </div>
     <div id="topbar-placeholder"></div>
     <header>
         <div id="mainnav-placeholder"></div>
@@ -71,6 +76,12 @@
         var typed = new Typed(".auto-type", {
             strings: ["Learn more about me and my work."],
             typeSpeed: 100,
+        });
+        $(window).on('load', function () {
+            $(".loader").fadeOut(1000, function () {
+                $("body").css("overflow", "auto");
+            });
+            $(".content").fadeIn(1200);
         });
     </script>
 </body>
