--- a/index.html
+++ b/index.html
@@ -7,55 +7,68 @@
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body style="background-color: #161b22;">
 
-    <div id="topbar-placeholder"></div>
-    <header>
-        <div id="mainnav-placeholder"></div>
-        <img src="images/my.jpg" alt="My Image" class="profile-pic" loading="lazy" draggable="false">
-        <h1>Hi, I'm Omar Haji</h1>
-        <h2>And I'm a <span class="auto-type"></span></h2>
-        <p>I'm a front-end web developer based in Nablus. Welcome to my website.</p>
-    </header>
+    <div class="loader">
+        <img src="images/spinner.gif" alt="Loading...">
+    </div>
+    <div class="content">
+        <div id="topbar-placeholder"></div>
+        <header>
+            <div id="mainnav-placeholder"></div>
+            <img src="images/my.jpg" alt="My Image" class="profile-pic" loading="lazy" draggable="false">
+            <h1>Hi, I'm Omar Haji</h1>
+            <h2>And I'm a <span class="auto-type"></span></h2>
+            <p>I'm a front-end web developer based in Nablus. Welcome to my website.</p>
+        </header>
+        <section class="intro-section">
+            <h2>Hello there</h2>
+            <p class="typing">My name is Omar Haji. I'm a fresh graduate front-end web application developer.</p>
+            <br>
+            <p class="typing">I design and develop websites for small and medium businesses.</p>
+            <br>
+            <p class="typing">I'm a fast self-learner with an interest in learning a new programming concepts.</p>
+            <br>
+            <p class="typing">I am proficient in detecting logical problems and special test cases and fixing them.</p>
+            <br>
+            <p class="typing">Able to learn new skills anytime, I perform well under pressure. Excited to work with you.
+            </p>
+        </section>
 
-    <section class="intro-section">
-        <h2>Hello there</h2>
-        <p class="typing">My name is Omar Haji. I'm a fresh graduate front-end web application developer.</p>
-        <br>
-        <p class="typing">I design and develop websites for small and medium businesses.</p>
-        <br>
-        <p class="typing">I'm a fast self-learner with an interest in learning a new programming concepts.</p>
-        <br>
-        <p class="typing">I am proficient in detecting logical problems and special test cases and fixing them.</p>
-        <br>
-        <p class="typing">Able to learn new skills anytime, I perform well under pressure. Excited to work with you.</p>
-    </section>
+        <section class="contact-section">
+            <h3>Contact me</h3>
+            <p><i class="fas fa-map-marker-alt"></i> Nablus City, PS</p>
+            <p><i class="fas fa-phone"></i> +970 594503729</p>
+            <p><i class="fas fa-envelope"></i> omarhaji0002@gmail.com</p>
+        </section>
+        <button id="scrollToTopBtn" class="scroll-to-top" aria-label="Scroll to top">^</button>
+        <br><br><br>
+        <div id="footer-placeholder"></div>
+        <script src="stickyAndSmoothMeUp.js"></script>
+        <script src="mainnav.js"></script>
+        <script src="topbar.js"></script>
+        <script src="footer.js"></script>
+        <script src="typingEffect.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script>
+            var typed = new Typed(".auto-type", {
+                strings: ["Front-End Developer", "Freelancer", "Unity Game Engine Developer"],
+                typeSpeed: 100,
+                backSpeed: 50,
+                loop: true,
+            });
 
-    <section class="contact-section">
-        <h3>Contact me</h3>
-        <p><i class="fas fa-map-marker-alt"></i> Nablus City, PS</p>
-        <p><i class="fas fa-phone"></i> +970 594503729</p>
-        <p><i class="fas fa-envelope"></i> omarhaji0002@gmail.com</p>
-    </section>
-    <button id="scrollToTopBtn" class="scroll-to-top" aria-label="Scroll to top">^</button>
-    <br><br><br>
-    <div id="footer-placeholder"></div>
-    <script src="stickyAndSmoothMeUp.js"></script>
-    <script src="mainnav.js"></script>
-    <script src="topbar.js"></script>
-    <script src="footer.js"></script>
-    <script src="typingEffect.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script>
-        var typed = new Typed(".auto-type", {
-            strings: ["Front-End Developer", "Freelancer", "Unity Game Engine Developer"],
-            typeSpeed: 100,
-            backSpeed: 50,
-            loop: true,
-        });
-    </script>
+            $(window).on('load', function () {
+                $(".loader").fadeOut(1000, function () {
+                    $("body").css("overflow", "auto");
+                });
+                $(".content").fadeIn(1200);
+            });
+        </script>
+    </div>
 </body>
 
 </html>
