--- a/HTMLs/portfolio.html
+++ b/HTMLs/portfolio.html
@@ -5,8 +5,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="common.css">
-    <link rel="stylesheet" href="portfolio.css">
+    <link rel="stylesheet" href="../CSSs/common.css">
+    <link rel="stylesheet" href="../CSSs/portfolio.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
@@ -14,7 +14,7 @@
 
 <body>
     <div class="loader">
-        <img src="images/spinner.gif" alt="Loading...">
+        <img src="../images/spinner.gif" alt="Loading...">
     </div>
     <div id="topbar-placeholder"></div>
     <header>
@@ -36,7 +36,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="carousel-image-wrapper">
-                        <img src="images/AutoDemo.png" class="d-block w-100" alt="Project 1">
+                        <img src="../images/AutoDemo.png" class="d-block w-100" alt="Project 1">
                         <div class="overlay">
                             <div class="overlay-text">AutoMentor is well-designed, simulation-based educational package
                                 that gives learners an almost real, interactive
@@ -68,7 +68,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-image-wrapper">
-                        <img src="images/City Box Colliders.png" class="d-block w-100" alt="Project 1">
+                        <img src="../images/City Box Colliders.png" class="d-block w-100" alt="Project 1">
                         <div class="overlay">
                             <div class="overlay-text">Box Colliders:
                                 These game objects are invisible to the user, they only appear for developers at the
@@ -83,7 +83,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="carousel-image-wrapper">
-                        <img src="images/Stop Sign.png" class="d-block w-100" alt="Project 1">
+                        <img src="../images/Stop Sign.png" class="d-block w-100" alt="Project 1">
                         <div class="overlay">
                             <div class="overlay-text">When the user enters the stop zone game object, he should at least
                                 fully stop for 5 seconds to ensure that no risks
@@ -122,10 +122,10 @@
     <br>
     <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
-    <script src="stickyAndSmoothMeUp.js"></script>
-    <script src="mainnav.js"></script>
-    <script src="topbar.js"></script>
-    <script src="footer.js"></script>
+    <script src="../JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
+    <script src="../JAVASCRIPTs/mainnav.js"></script>
+    <script src="../JAVASCRIPTs/topbar.js"></script>
+    <script src="../JAVASCRIPTs/footer.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
