organzing css folder again

--- a/HTMLs/about.html
+++ b/HTMLs/about.html
@@ -62,8 +62,10 @@
         <h3>Contact me</h3>
         <p><i class="fas fa-map-marker-alt"></i> Nablus City, PS</p>
         <p><i class="fas fa-phone"></i> +970 594503729</p>
-        <p><i class="fas fa-envelope"></i> omarhaji0002@gmail.com</p>
+        <p><i class="fas fa-envelope"></i> <a href="mailto:omarhaji0002@gmail.com"
+                class="email-link">omarhaji0002@gmail.com</a></p>
     </section>
+
     <br><br><br>
     <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
