top bar extra button

--- a/HTMLs/top-bar.html
+++ b/HTMLs/top-bar.html
@@ -10,5 +10,8 @@
             <i class="fab fa-linkedin-in"></i>
         </a>
     </div>
-    <button onclick="location.href='contact.html'" style="border-radius: 5px;">Hire me now</button>
+    <div class="buttons">
+        <button onclick="location.href='../myCv/cv.pdf'" style="border-radius: 5px;">Download my CV</button>
+        <button onclick="location.href='contact.html'" style="border-radius: 5px;">Hire me now</button>
+    </div>
 </div>
