--- a/HTMLs/about.html
+++ b/HTMLs/about.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>About</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../CSSs/common.css">
     <link rel="stylesheet" href="../CSSs/about.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
 </head>
 
 <body style="background-color: #161b22;">
@@ -21,7 +22,6 @@
         <h1>About Me</h1>
         <p><span class="auto-type"></span></p>
     </header>
-
     <section class="about-section">
         <h2>Biography</h2>
         <p>My name is Omar Haji, a 22-year-old CS graduate from NNU, a fast and self-learner programmer with an interest
@@ -57,7 +57,6 @@
             - Blender
         </p>
     </section>
-
     <section class="contact-section">
         <h3>Contact me</h3>
         <p><i class="fas fa-map-marker-alt"></i> Nablus City, PS</p>
@@ -65,8 +64,7 @@
         <p><i class="fas fa-envelope"></i> <a href="mailto:omarhaji0002@gmail.com"
                 class="email-link">omarhaji0002@gmail.com</a></p>
     </section>
-
-    <br><br><br>
+    <br>
     <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
     <script src="../JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
