--- a/HTMLs/contact.html
+++ b/HTMLs/contact.html
@@ -2,13 +2,14 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../CSSs/common.css">
     <link rel="stylesheet" href="../CSSs/contact.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
 </head>
 
 <body style="background-color: #161b22;">
@@ -21,8 +22,6 @@
         <h1>Contact</h1>
         <p><span class="auto-type"></span></p>
     </header>
-    <br>
-    <br><br>
     <section class="form-section">
         <div class="form-container">
             <h2>Do you have any questions?</h2>
@@ -42,8 +41,7 @@
         <p><i class="fas fa-envelope"></i> <a href="mailto:omarhaji0002@gmail.com"
                 class="email-link">omarhaji0002@gmail.com</a></p>
     </section>
-
-    <br><br><br>
+    <br>
     <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
     <script src="../JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
