--- a/HTMLs/index.html
+++ b/HTMLs/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Freelancer Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../CSSs/common.css">
@@ -11,7 +13,6 @@
 </head>
 
 <body style="background-color: #161b22;">
-
     <div class="loader">
         <img src="../images/spinner.gif" alt="Loading...">
     </div>
@@ -24,20 +25,17 @@
             <h2>And I'm a <span class="auto-type"></span></h2>
             <p>I'm a front-end web developer based in Nablus. Welcome to my website.</p>
         </header>
+
         <section class="intro-section">
             <h2>Hello there</h2>
+            <br><br>
             <p class="typing">My name is Omar Haji. I'm a fresh graduate front-end web application developer.</p>
-            <br>
             <p class="typing">I design and develop websites for small and medium businesses.</p>
-            <br>
             <p class="typing">I'm a fast self-learner with an interest in learning a new programming concepts.</p>
-            <br>
             <p class="typing">I am proficient in detecting logical problems and special test cases and fixing them.</p>
-            <br>
             <p class="typing">Able to learn new skills anytime, I perform well under pressure. Excited to work with you.
             </p>
         </section>
-
         <section class="contact-section">
             <h3>Contact me</h3>
             <p><i class="fas fa-map-marker-alt"></i> Nablus City, PS</p>
@@ -45,9 +43,8 @@
             <p><i class="fas fa-envelope"></i> <a href="mailto:omarhaji0002@gmail.com"
                     class="email-link">omarhaji0002@gmail.com</a></p>
         </section>
-
+        <br>
         <button id="scrollToTopBtn" class="scroll-to-top" aria-label="Scroll to top">^</button>
-        <br><br><br>
         <div id="footer-placeholder"></div>
         <script src="../JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
         <script src="../JAVASCRIPTs/mainnav.js"></script>
@@ -62,7 +59,6 @@
                 backSpeed: 50,
                 loop: true,
             });
-
             $(window).on('load', function () {
                 $(".loader").fadeOut(1000, function () {
                     $("body").css("overflow", "auto");
