--- a/HTMLs/index.html
+++ b/HTMLs/index.html
@@ -52,6 +52,7 @@
         <script src="../JAVASCRIPTs/footer.js"></script>
         <script src="../JAVASCRIPTs/typingEffect.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script src="../JAVASCRIPTs/lazyload.js"></script>
         <script>
             var typed = new Typed(".auto-type", {
                 strings: ["Front-End Developer", "Freelancer", "Unity Game Engine Developer"],
