--- a/HTMLs/contact.html
+++ b/HTMLs/contact.html
@@ -51,7 +51,7 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["If you have any questions, feel free to contact me using the form below."],
+            strings: ["feel free to contact me using the form below."],
             typeSpeed: 100,
         });
         $(window).on('load', function () {
