--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Freelancer Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="CSSs/common.css">
-    <link rel="stylesheet" href="CSSs/index.css">
+    <link rel="stylesheet" href="./CSSs/common.css">
+    <link rel="stylesheet" href="./CSSs/index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body style="background-color: #161b22;">
     <div class="loader">
-        <img src="../images/spinner.gif" alt="Loading...">
+        <img src="./images/spinner.gif" alt="Loading...">
     </div>
     <div id="topbar-placeholder"></div>
     <header>
         <div id="mainnav-placeholder"></div>
-        <img src="../images/my.jpg" alt="My Image" class="profile-pic" loading="lazy" draggable="false">
+        <img src="./images/my.jpg" alt="My Image" class="profile-pic" loading="lazy" draggable="false">
         <h1>Hi, I'm Omar Haji</h1>
         <h2>And I'm a <span class="auto-type"></span></h2>
         <p>I'm a front-end web developer based in Nablus. Welcome to my website.</p>
@@ -45,13 +45,13 @@
     <br>
     <button id="scrollToTopBtn" class="scroll-to-top" aria-label="Scroll to top">^</button>
     <div id="footer-placeholder"></div>
-    <script src="../JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
-    <script src="../JAVASCRIPTs/mainnav.js"></script>
-    <script src="../JAVASCRIPTs/topbar.js"></script>
-    <script src="../JAVASCRIPTs/footer.js"></script>
-    <script src="../JAVASCRIPTs/typingEffect.js"></script>
+    <script src="./JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
+    <script src="./JAVASCRIPTs/mainnav.js"></script>
+    <script src="./JAVASCRIPTs/topbar.js"></script>
+    <script src="./JAVASCRIPTs/footer.js"></script>
+    <script src="./JAVASCRIPTs/typingEffect.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="../JAVASCRIPTs/lazyload.js"></script>
+    <script src="./JAVASCRIPTs/lazyload.js"></script>
     <script>
         var typed = new Typed(".auto-type", {
             strings: ["Front-End Developer", "Freelancer", "Unity Game Engine Developer"],
