--- a/HTMLs/mainnav.html
+++ b/HTMLs/mainnav.html
@@ -1,8 +1,8 @@
 <nav class="main-nav">
     <ul>
-        <li><a href="./index.html">HOME</a></li>
-        <li><a href="./HTMLs/portfolio.html">PORTFOLIO</a></li>
-        <li><a href="./HTMLs/about.html">ABOUT</a></li>
-        <li><a href="./HTMLs/contact.html">CONTACT</a></li>
+        <li><a href="/index.html">HOME</a></li>
+        <li><a href="/HTMLs/portfolio.html">PORTFOLIO</a></li>
+        <li><a href="/HTMLs/about.html">ABOUT</a></li>
+        <li><a href="/HTMLs/contact.html">CONTACT</a></li>
     </ul>
 </nav>
