--- a/carousel1.html
+++ b/carousel1.html
@@ -8,7 +8,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="carousel-image-wrapper">
-                    <img src="../images/AutoDemo.png" class="d-block w-100" alt="Project 1">
+                    <img src="images/AutoDemo.png" class="d-block w-100" alt="Project 1">
                     <div class="overlay">
                         <div class="overlay-text">AutoMentor is well-designed, simulation-based educational package
                             that gives learners an almost real, interactive driving experience. The small city
@@ -32,7 +32,7 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel-image-wrapper">
-                    <img src="../images/City Box Colliders.png" class="d-block w-100" alt="Project 1">
+                    <img src="images/City Box Colliders.png" class="d-block w-100" alt="Project 1">
                     <div class="overlay">
                         <div class="overlay-text">Box Colliders: These game objects are invisible to the user, they
                             only appear for developers at the development stage. These game objects are used for
@@ -45,7 +45,7 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel-image-wrapper">
-                    <img src="../images/Stop Sign.png" class="d-block w-100" alt="Project 1">
+                    <img src="images/Stop Sign.png" class="d-block w-100" alt="Project 1">
                     <div class="overlay">
                         <div class="overlay-text">When the user enters the stop zone game object, he should at least
                             fully stop for 5 seconds to ensure that no risks threaten his safety and use indicators
