--- a/carousel2.html
+++ b/carousel2.html
@@ -8,7 +8,7 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="carousel-image-wrapper">
-                    <img src="../images/workingOnIt.gif" class="d-block w-100" alt="Project 4">
+                    <img src="images/workingOnIt.gif" class="d-block w-100" alt="Project 4">
                     <div class="overlay">
                         <div class="overlay-text">Description for Photo 1</div>
                     </div>
@@ -19,7 +19,7 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel-image-wrapper">
-                    <img src="../images/workingOnIt.gif" class="d-block w-100" alt="Project 5">
+                    <img src="images/workingOnIt.gif" class="d-block w-100" alt="Project 5">
                     <div class="overlay">
                         <div class="overlay-text">Description for Photo 2</div>
                     </div>
@@ -30,7 +30,7 @@
             </div>
             <div class="carousel-item">
                 <div class="carousel-image-wrapper">
-                    <img src="../images/workingOnIt.gif" class="d-block w-100" alt="Project 6">
+                    <img src="images/workingOnIt.gif" class="d-block w-100" alt="Project 6">
                     <div class="overlay">
                         <div class="overlay-text">Description for Photo 3</div>
                     </div>
