--- a/top-bar.html
+++ b/top-bar.html
@@ -11,7 +11,7 @@
         </a>
     </div>
     <div class="buttons">
-        <button onclick="window.open('../myCv/cv.pdf', '_blank');" style="border-radius: 5px;">Download my CV</button>
+        <button onclick="window.open('myCv/cv.pdf', '_blank');" style="border-radius: 5px;">Download my CV</button>
         <button onclick="location.href='contact.html'" style="border-radius: 5px;">Hire me now</button>
     </div>
 </div>
