--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSSs/common.css">
-    <link rel="stylesheet" href="../CSSs/contact.css">
+    <link rel="stylesheet" href="CSSs/common.css">
+    <link rel="stylesheet" href="CSSs/contact.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 
 <body style="background-color: #161b22;">
     <div class="loader">
-        <img src="../images/spinner.gif" alt="Loading...">
+        <img src="images/spinner.gif" alt="Loading...">
     </div>
     <div id="topbar-placeholder"></div>
     <header>
@@ -44,10 +44,10 @@
     <br>
     <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
-    <script src="../JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
-    <script src="../JAVASCRIPTs/mainnav.js"></script>
-    <script src="../JAVASCRIPTs/topbar.js"></script>
-    <script src="../JAVASCRIPTs/footer.js"></script>
+    <script src="JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
+    <script src="JAVASCRIPTs/mainnav.js"></script>
+    <script src="JAVASCRIPTs/topbar.js"></script>
+    <script src="JAVASCRIPTs/footer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
         var typed = new Typed(".auto-type", {
