--- a/portfolio.html
+++ b/portfolio.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="../CSSs/common.css">
-    <link rel="stylesheet" href="../CSSs/portfolio.css">
+    <link rel="stylesheet" href="CSSs/common.css">
+    <link rel="stylesheet" href="CSSs/portfolio.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -15,7 +15,7 @@
 
 <body style="background-color: #161b22;">
     <div class="loader">
-        <img src="../images/spinner.gif" alt="Loading...">
+        <img src="images/spinner.gif" alt="Loading...">
     </div>
     <div id="topbar-placeholder"></div>
     <header>
@@ -30,10 +30,10 @@
     <div id="carousel2-placeholder" class="mt-5"></div>
     <div id="footer-placeholder"></div>
     <button id="scrollToTopBtn" class="scroll-to-top">^</button>
-    <script src="../JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
-    <script src="../JAVASCRIPTs/mainnav.js"></script>
-    <script src="../JAVASCRIPTs/topbar.js"></script>
-    <script src="../JAVASCRIPTs/footer.js"></script>
+    <script src="JAVASCRIPTs/stickyAndSmoothMeUp.js"></script>
+    <script src="JAVASCRIPTs/mainnav.js"></script>
+    <script src="JAVASCRIPTs/topbar.js"></script>
+    <script src="JAVASCRIPTs/footer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -60,10 +60,10 @@
 
         $(document).ready(function () {
             // Load carousels
-            $("#carousel1-placeholder").load("../HTMLs/carousel1.html", function () {
+            $("#carousel1-placeholder").load("carousel1.html", function () {
                 applyHoverEffect(); // Apply hover effect after loading content
             });
-            $("#carousel2-placeholder").load("../HTMLs/carousel2.html", function () {
+            $("#carousel2-placeholder").load("carousel2.html", function () {
                 applyHoverEffect(); // Apply hover effect after loading content
             });
         });
