--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script src="JAVASCRIPTs/lazyload.js"></script>
     <script>
         var typed = new Typed(".auto-type", {
-            strings: ["Front-End Developer", "Freelancer", "Unity Game Engine Developer"],
+            strings: ["Front-End Developer", "Freelancer", "Unity Game Engine Developer", "LK Wellness Trainee"],
             typeSpeed: 100,
             backSpeed: 50,
             loop: true,
