--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <div id="mainnav-placeholder"></div>
         <img src="images/my.jpg" alt="My Image" class="profile-pic" loading="lazy" draggable="false">
-        <h1>Hi, I'm  Haji</h1>
+        <h1>Hi, I'm Omar Haji</h1>
         <h2>And I'm a <span class="auto-type"></span></h2>
         <p>I'm a front-end web developer based in Nablus. Welcome to my website.</p>
     </header>
